<resources>
    <string name="app_name">Health boost</string>

    <string name="splash_quote">Good health is not something we can buy. However, it can be an extremely valuable savings account</string>
    <string name="login_Hello">Hello there , Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">FORGET PASSWORD ?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">NEW USER SIGN UP</string>
    <string name="signup">signup</string>
    <string name="log_in">login</string>
    <string name="email">email</string>
    <string name="todo">leaf</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="student">Student</string>
    <string name="coach">COACH</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify">verify</string>
    <string name="verification">verification</string>
    <string name="firstname">firstName</string>
    <string name="lastName">lastName</string>
    <string name="Check">check</string>
    <string name="data">data</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_coach">CoachActivity</string>
    <string name="title_home">Home</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_Coach">Hire Coach</string>
    <string name="bmi">BMI</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>