<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_student"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipe_student"
        android:icon="@drawable/ic_cook_book"
        android:title="@string/title_recipe" />

    <item
        android:id="@+id/navigation_hireCoach"
        android:icon="@drawable/ic_personal"
        android:title="@string/title_Coach" />
    <item
        android:id="@+id/navigation_BMI"
        android:icon="@drawable/ic_leaf"
        android:title="@string/bmi" />

    <item
        android:id="@+id/navigation_Setting_student"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />

</menu>