<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_student"
    app:startDestination="@+id/navigation_home_student">

    <fragment
        android:id="@+id/navigation_home_student"
        android:name="health.boost.studentUi.home.StudentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_student" />

    <fragment
        android:id="@+id/navigation_recipe_student"
        android:name="health.boost.studentUi.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe_student" />

    <fragment
        android:id="@+id/navigation_hireCoach"
        android:name="health.boost.studentUi.hireCoach.HireCoachFragment"
        android:label="@string/title_Coach"
        tools:layout="@layout/fragment_hire_coach" />

    <fragment
        android:id="@+id/navigation_BMI"
        android:name="health.boost.studentUi.bmi.BmiFragment"
        android:label="@string/bmi"
        tools:layout="@layout/fragment_bmi_student" />
    <fragment
        android:id="@+id/navigation_Setting_student"
        android:name="health.boost.studentUi.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting_student" />
</navigation>