<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/ic_wave"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout_verification"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/verification"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" />
        <ImageView
            android:id="@+id/verification_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/ic_correct"
            android:contentDescription="@string/todo" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_verification"
        android:layout_marginTop="60dp"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_verification_code"
                android:lines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verification_submitButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/emphasis"
            android:layout_marginStart="75dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>